--- a/data/userconfig.json
+++ b/data/userconfig.json
@@ -1,1 +1,1 @@
-{"xScale":"0.5555556","xFeed":"720.00","xAction01":"360"}
+{"xScale":"0.56","xFeed":"720.00","xAction01":"360","runButtonDelay":"300","inMaxTime":"2000","outMinTime":"200","repeats":"5"}
