--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,8 @@ lib_deps_external =
 ;  PID
   ArduinoJson
   ESPAsyncTCP
-  ESPAsyncWebServer
+; ESPAsyncWebServer
+  ESP Async WebServer
 #  Time
 # forf error "WebHandlers.cpp:67:64: error: 'strftime' was not declared in this scope"
 # get version from git https://github.com/PaulStoffregen/Time
